--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,32 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Dosis:wght@800&family=Roboto:wght@300;400&display=swap');
+
+*{padding: 0; margin: 0;}
+
+body{box-sizing: border-box;
+  background-color: #ffffff;
+  font-size: 1em;
+  font-family: 'Roboto', sans-serif;
+  color: #273147;
+  font-weight: 300;
 }
-
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container-app{
+  width: 100%;
+  height: 100vh;
   display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+h1, h2, h3{margin: 0; padding: 0; font-size: 2em;}
+
+a{
+  font-family: 'Roboto', sans-serif;
+}
+
+@media screen and (min-width: 200px) and (max-width: 640px) {
+  .container-app{
+    display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
   }
-  to {
-    transform: rotate(360deg);
-  }
+
 }
