--- a/src/MonDashboard/Page.css
+++ b/src/MonDashboard/Page.css
@@ -198,7 +198,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
   }
   
   .aside .section-settings ul li{
